--- a/pages/sport/football.html
+++ b/pages/sport/football.html
@@ -58,16 +58,18 @@
 
     <!-- End here navbar  -->
      <!-- End here navbar  -->
+     <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+    <h1>Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time.</h1>
+    </div>
+    <div class="d-t">
+        Date: JUL 05,2023<br>
+        Time:11.18 am<br>
+        Refers:Timeofindia<br>
+    </div>
 <div class="container0">
-    <h1 style="text-align: center;">Gurpreet Singh Sandhu's brilliant save helps India win SAFF Championship for a record 9th time</h1>
 <br><br>
-<p><span style="text-align: left;">
-    Date: JUL 05,2023<br>
-    Time:11.18 am<br>
-    Refers:Timeofindia<br>
-</span>
-</p>
-    <img src="../../images/football_news"style="height:400px;margin:20px">
+<img src="../../images/football_news"style="height:400px;margin:20px">
     <br>
  <span style="font-size:12px;text-align: center;"></span>
  <br>
@@ -143,51 +145,5 @@
 </footer>
 
 <!-- footer has been ended here -->    
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-    
 </body>
 </html>
