--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -42,13 +42,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
+                    <li><a href="./../../index.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
                     <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
