--- a/pages/Entertainment/ent-pages/page3.html
+++ b/pages/Entertainment/ent-pages/page3.html
@@ -62,17 +62,22 @@
     <!--Read More content started-->
     <div class="readmore-heading-details">
         <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a>
-        <h1></h1>
+        <h1>Deadpool And Wolverine Box Office Collection Day 20: Marvel Film Earns Rs 130.40 Crore, To Clash With Major New Releases</h1>
     </div>
-    <p>By: <span class="author">By</span></p>
-    <p>Published on: <span class="date">Aug 16, 2024</span></p>
+    <p>By: <span class="author">Mimansa Shekhar</span></p>
+    <p>Published on: <span class="date">Aug 15, 2024</span></p>
    <br>
     <div class="img_container">
-        <img src="" alt="" class="front_img" />
+        <img src="https://media.cnn.com/api/v1/images/stellar/prod/01-deadpool-wolverine.jpg?c=16x9&q=h_653,w_1160,c_fill/f_webp" alt="Deadpool And Wolverine" class="front_img" />
 
         <div class="information_block">
            <p> 
-            
+            <b>Deadpool And Wolverine Box Office Collection Day 20:</b> The Ryan Reynolds and Hugh Jackman starrer's thunderous box office performance and its unstoppable triumph at the theatres, suggests that the Marvel film is here for a long haul. Infact, the events of Deadpool & Wolverine are touted to change the course of the MCU.
+            Deadpool & Wolverine released on July 26. The threequel in the franchise brings the two superheroes
+            joining forces. The movie opened at Rs 21 crore, and went on to collect an estimated Rs 89.90 crore by
+            the end of its first week, and added another Rs 27.9 crore by its second week, as reported by Sacnilk.com.
+            In its third week at the running, Deadpool & Wolverine it collected Rs 2.25 crore on Day 20, taking the total to Rs 130.40 crore, as per early estimates on the trade website.
+After a thunderous opening across the globe, Deadpool & Wolverine has become one of the biggest grossers of 2024. It has managed to end the dull phase of Marvel Studios that was making the future of MCU unpredictable ever since Avengers: Endgame (2019) concluded its Phase 3. The movie's performance in India is a rare achievemt for a Hollywood movie.
             </p>
            <br>
              
