--- a/pages/Entertainment/ent-pages/page4.html
+++ b/pages/Entertainment/ent-pages/page4.html
@@ -62,18 +62,25 @@
     <!--Read More content started-->
     <div class="readmore-heading-details">
         <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a>
-        <h1></h1>
+        <h1>Stree 2 Twitter reviews: Rajkummar Rao, Shraddha Kapoor film called ‘blockbuster’; people love 'that' cameo</h1>
     </div>
-    <p>By: <span class="author">By</span></p>
-    <p>Published on: <span class="date">Aug 16, 2024</span></p>
+    <p>By: <span class="author">Ananya Das</span></p>
+    <p>Published on: <span class="date">Aug 15, 2024</span></p>
    <br>
     <div class="img_container">
-        <img src="" alt="" class="front_img" />
+        <img src="https://images.hindustantimes.com/img/2024/08/15/550x309/stree_2_twitter_reviews_1723715131032_1723715131220.png" alt="Stree2" class="front_img" />
 
         <div class="information_block">
            <p> 
-            
-            </p>
+            Stree 2 released along with Vedaa, Khel Khel Mein, Thangalaan, Double iSmart and Mr Bachchan. It is the sequel to the 2018 film Stree. SPOILERS ahead.
+            Stree 2, the much-anticipated horror comedy, released in theatres on Thursday. After watching the film, people took to X (formerly Twitter) and heaped praises on the film. A section of the people loved the cameo of Akshay Kumar, while many called it better than the first movie, Stree (2018).
+             Directed by Amar Kaushik, the film stars Rajkummar Rao, Shraddha Kapoor, Aparshakti Khurana, Abhishek Banerjee and Pankaj Tripathi.
+Taking to X, a person wrote, "Akshay Kumar's cameo in Stree 2 is funnier than irritating Aparshakti and sometimes even Pankaj Tripathi." "#Stree2 is an entertaining and thrilling ride that strikes the perfect balance. The seamless mix of comedy and storyline, combined with stunning visuals and sound effects, creates a genuinely chilling experience. 
+It’s a well-crafted film brimming with entertainment," said a fan. A tweet read, “1. Proper sequel, 2. Perfect mixture of comedy &horror, 3. Scarier than the first part, 4. #AkshayKumar entry in movies, 5. Lovely cameos, 6. Shraddha Kapoor's hot & sizzling avatar, 7. You will love songs. So Blockbuster Movie.”
+Fans say Stree 2 is better than first movie
+Another person said, "Shraddha Kapoor's presence is surreal. Rajkumar Rao's style is similar to Bareilly ki Barfi. It is entertaining at its best: a fantastic movie. Better than Stree 1. Two Special Cameos." A comment read, "The King re-enters in the Horror Genre. The KING Akshay Kumar in Stree 2 enters Horror Universe." 
+Another fan wrote, "Just saw #Stree2SarkateKaAatank after a long time whole cinema was enjoying, laughter coming from all corners everything on point but for me, those scare jump scenes with superb BGSCORE is the best part @MaddockFilms can't wait to see Thanos (Ak)."        
+</p>
            <br>
              
             </div>
