--- a/pages/Entertainment/ent-pages/page5.html
+++ b/pages/Entertainment/ent-pages/page5.html
@@ -62,18 +62,25 @@
     <!--Read More content started-->
     <div class="readmore-heading-details">
         <a href="./../entertainment.html"><img src="./../../../images/back-btn.png" class="back-btn" /></a>
-        <h1></h1>
+        <h1>Vedaa review: John Abraham and Sharvari’s thriller on caste system gets you thinking, delivers a hard-hitting message</h1>
     </div>
-    <p>By: <span class="author">By</span></p>
-    <p>Published on: <span class="date">Aug 16, 2024</span></p>
+    <p>By: <span class="author">Rishabh Suri</span></p>
+    <p>Published on: <span class="date">Aug 15, 2024</span></p>
    <br>
     <div class="img_container">
-        <img src="" alt="" class="front_img" />
+        <img src="https://images.hindustantimes.com/img/2024/08/15/550x309/john_abraham_1723703801732_1723703801915.jpg" alt="Vedaa" class="front_img" />
 
         <div class="information_block">
            <p> 
-            
-            </p>
+            <b>Vedaa review:</b>  John Abraham brings action and muscles to the story of an abused, oppressed woman, played by Sharvari.
+            Vedaa’s win lies in the attention to details. As hard it is to digest, a girl belonging to a lower caste, requests an upper caste woman to fill her water bottle from the college’s water cooler. It is so deeply ingrained in her, that in another scene, she would rather cry and let a gang of upper caste hooligans assault her, than react.
+John Abraham is back with action (that he wants all non-idiots to know isn't anything like this recent action films), complete with his t-shirt-ripping muscles. Only here, there’s brains behind the brawn. Vedaa begins with the story of a court marshalled Gorkha officer, Major Abhimanyu Kanwar (played by John), who enters the life of a young girl, Vedaa (played by Sharvari). 
+She has seen honour killings up close and personally- her own brother was brutally killed by the ‘Pradhan’ of the village, Jitendra Pratap Singh (played by Abhishek Banerjee). He also kills a girl from his family for running away with the 'lower caste' boy.
+You get the drift. Sharvari plans to do a lot with her life. She yearns to learn boxing even as people around dissuade her. Abhimanyu recognises her zeal, and begins to train her, much to the dismay of the fellow male boxers.
+After killing her sister, the upper caste antagonists are now chasing Sharvari in order to kill her. Does she escape?
+Nikhil Advani has clearly come a long way from the sappy romance he directed in Kal Ho Naa Ho, to now Vedaa. The sensitivity of the subject at hand is revealed via just the disclaimer shown in the beginning of the film.
+
+        </p>
            <br>
              
             </div>
