Dates added to sub news pages

--- a/pages/worldnews/worldnews_1.html
+++ b/pages/worldnews/worldnews_1.html
@@ -63,6 +63,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>Hamas-run health ministry reports that more than 40,000 people have been killed in Gaza.</h1>
     </div>
+    <div class="d-t">
+        Date : Sat , Aug 17
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/Gazasub.webp" alt="Gaza" class="front_img" />
