--- a/pages/worldnews/worldnews_4.html
+++ b/pages/worldnews/worldnews_4.html
@@ -62,6 +62,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>"Took Advantage Of His Addiction": 5 Charged Over Matthew Perry's Death</h1>
     </div>
+    <div class="d-t">
+        Date : Fri , Aug 16
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/matthewsub.jpg" alt="matthew-perry" class="front_img" />
