--- a/pages/worldnews/worldnews_5.html
+++ b/pages/worldnews/worldnews_5.html
@@ -63,6 +63,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>L.A. ballerina sentenced to 12 years in Russian penal colony for 'high treason'</h1>
     </div>
+    <div class="d-t">
+        Date : Thus , Aug 15
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/russiansub.jpg" alt="ksenia-karelina" class="front_img" />
