--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -63,6 +63,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>Taylor Swift fans flock to London for final leg of Eras Tour after Vienna terrorism plot</h1>
     </div>
+    <div class="d-t">
+        Date : Thus , Aug 15
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/taylorsub.jpeg" alt="Taylor swift" class="front_img"/>
