--- a/pages/worldnews/worldnews_2.html
+++ b/pages/worldnews/worldnews_2.html
@@ -62,6 +62,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>Indian doctors stage nationwide strike after trainee doctor is raped and killed</h1>
     </div>
+    <div class="d-t">
+        Date : Wed , Aug 14
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/doctorkolkata.avif" alt="kolkata case" class="front_img" />
