--- a/pages/worldnews/worldnews_3.html
+++ b/pages/worldnews/worldnews_3.html
@@ -63,6 +63,10 @@
         <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1>The WHO warns that Europe is likely to see a rise in monkeypox cases in the near future</h1>
     </div>
+    <div class="d-t">
+        Date : Wed , Aug 14
+    </div>
+    <br>
 
     <div class="img_container">
         <img src="./../../images/monkeypoxsub.jpeg" alt="monkey poxx" class="front_img" />
