--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,31 +17,28 @@
                 <div>
                     <h4>The</h4>
                     <h2><span class="heading-fisrt">News</span> Reporter</h2>
-
-
                 </div>
                 <div>
                     <ul class="top-nav-list">
-                        <li><a href="#">Home</a></li>|
-                        <li><a href="">About</a></li>|
+                        <li><a href="./../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
                         <li><a href="">Contact</a></li>|
                         <li><a href="">Login</a></li>
                     </ul>
                 </div>
                 <div class="top-nav-icons">
-                    <a href="http://facebook.com" target="_blank"><img src="./../images/facebook.png" alt="facebook-icon" target="_blank"></a>
-                    <a href="https://instagram.com" target="_blank"><img src="./../images/instagram.png" alt="instagram-icon"></a>
-                    <a href="https://web.telegram.org" target="_blank"><img src="./../images/telegram.png" alt="telegram-icon"></a>
-                    <a href="https://youtube.com" target="_blank"><img src="../images/youtube.png" alt="youtube-icon"></a>
+                    <a href="http://facebook.com " target="_blank "><img src="../images/facebook.png " alt="facebook-icon " target="_blank "></a>
+                    <a href="https://instagram.com " target="_blank "><img src="../images/instagram.png " alt="instagram-icon "></a>
+                    <a href="https://web.telegram.org " target="_blank "><img src="../images/telegram.png " alt="telegram-icon "></a>
+                    <a href="https://youtube.com " target="_blank "><img src="../images/youtube.png " alt="youtube-icon "></a>
                 </div>
-            </div>
-            <div class="search-and-bar">
-                <div class="top-nav-search-bar">
-                    <input type="text" placeholder="Search news" />
-                    <img src="../images/magnifying-glass.png" />
+                <div class="search-and-bar">
+                    <div class="top-nav-search-bar ">
+                        <input type="text " placeholder="Search news " />
+                        <img src="../images/magnifying-glass.png " />
+                    </div>
+                    <img class="menu-bar-icon " src="./images/bar-icon.png " alt="tap to open menu " />
                 </div>
-                <img class="menu-bar-icon" src="../images/bar-icon.png" alt="tap to open menu">
-            </div>
             </div>
             </div>
             <div>
@@ -53,12 +50,11 @@
                     <li><a href=" ">Business</a></li>
                     <li><a href=" ">Culture</a></li>
                     <li><a href=" ">Education</a></li>
-
                 </ul>
             </div>
         </nav>
     </header>
-    <h1 class="contact ">contact from #08</h1>
+    <h1 class="contact ">contact us</h1>
 
     <div class="container ">
         <div class="card ">
@@ -80,7 +76,7 @@
         </div>
     </div>
 
-    <h1 class="contact ">Get i touch with us</h1>
+    <h1 class="contact ">connect with us</h1>
 
     <form class="form ">
         <label for="input full name ">  Full name:</label>
