news container added

--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -69,7 +69,7 @@
                         <div class="homepage-Card">
                             <h3>Pixel Watch 3 With Brighter Actua Display Launched in India .</h3>
                             <p>Pixel Watch 3 company's third generation smartwatch launched in India promises 36 hours of battery life & available in two display size.</p>
-                            <a href="">Read more</a>
+                            <a href="tech1.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -78,7 +78,7 @@
                         <div class="homepage-Card">
                             <h3>Pixel 9 Pro and Pixel 9 Pro XL launched.</h3>
                             <p>Google at its flagship Made by Google event in Mountain View, California, introduced the top-of-the-line Pixel 9 Pro and the Pixel 9 Pro XL smartphones.</p>
-                            <a href="">Read more</a>
+                            <a href="tech2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
@@ -87,7 +87,7 @@
                         <div class="homepage-Card">
                             <h3>Vivo,Xiaomi leads as Indian smartphone market in 2024.</h3>
                             <p>Vivo,Xiaomi & Samsung dominated Indian smartphone market,which reach 69 million units,marks a 7% year-over-year growth in the first half of 2024. </p>
-                            <a href="">Read more</a>
+                            <a href="tech3.html">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             <div class="homepage-Card">
                                 <h3>SpaceX’s mission to explore polar orbit first for spaceflight.</h3>
                                 <p>Elon Musk’s SpaceX has announced plans to launch the first-ever crewed mission to explore Earth’s polar orbit by the end of this year.</p>
-                                <a href="">Read more</a>
+                                <a href="tech4.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -112,7 +112,7 @@
                             <div class="homepage-Card">
                                 <h3>Instagram features to let user keep friends update on their location.</h3>
                                 <p>Instagram is reportedly working on allowing users to share real-time updates with their friends on a map to get their locations.</p>
-                                <a href="">Read more</a>
+                                <a href="tech5.html">Read more</a>
                             </div>
                         </div>
                         <div class="card">
@@ -121,7 +121,7 @@
                             <div class="homepage-Card">
                                 <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
                                 <p>With emergence of generative AI, existing robots like Sophia developed by Hanson Robotics,a future with fully-realised robots doesn’t seem distant.</p>
-                                <a href="">Read more</a>
+                                <a href="tech6.html">Read more</a>
                             </div>
                         </div>
                     </div>
