--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -53,6 +53,12 @@
             </div>
         </nav>
     </header>
+    <!-- news content-->
+
+    <div class="news-con">
+        <div class="text-center">tge</div>
+
+    </div>
     <!-- footer has been started from here -->
 
     <footer>
