--- a/pages/tech/tech.html
+++ b/pages/tech/tech.html
@@ -67,7 +67,7 @@
                         <img src="../../images/pixelwatch.jpeg"
                             alt="">
                         <div class="homepage-Card">
-                            <h3>Pixel Watch 3 With Brighter Actua Display Launched in India .</h3>
+                            <h3>Pixel Watch 3 With Brighter Display Launched in India .</h3>
                             <p>Pixel Watch 3 company's third generation smartwatch launched in India promises 36 hours of battery life & available in two display size.</p>
                             <a href="tech1.html">Read more</a>
                         </div>
