--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -56,7 +56,7 @@
     <!-- news content-->
 
     <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Actua Display Launched in India</div>
+        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
 
     </div>
     <!-- footer has been started from here -->
