--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -57,7 +57,10 @@
 
     <div class="news-con">
         <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
-
+    </div>
+    <div class="news-dt">
+        <div>Date: Aug16,2024</div>
+        <div> Time: 11am</div>
     </div>
     <!-- footer has been started from here -->
 
