css for img added

--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -58,9 +58,12 @@
     <div class="news-con">
         <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
     </div>
-    <div class="news-dt">
+    <div class="news_dt">
         <div>Date: Aug16,2024</div>
         <div> Time: 11am</div>
+    </div>
+    <div>
+        <img src="./../../images/pixelwatch.jpeg" alt="" class="news_img">
     </div>
     <!-- footer has been started from here -->
 
