--- a/pages/tech/tech1.html
+++ b/pages/tech/tech1.html
@@ -64,6 +64,9 @@
     </div>
     <div>
         <img src="./../../images/pixelwatch.jpeg" alt="" class="news_img">
+        <div>
+            
+        </div>
     </div>
     <!-- footer has been started from here -->
 
