--- a/pages/tech/tech2.html
+++ b/pages/tech/tech2.html
@@ -63,7 +63,7 @@
         <div> Time: 11am</div>
     </div>
     <div>
-        <img src="./../../images/pixelwatch.jpeg" alt="" class="news_img">
+        <img src="./../../images/pixel-9-pro-series_b46d56.webp" alt="" class="news_img">
         <div>
             
         </div>
