--- a/pages/tech/tech2.html
+++ b/pages/tech/tech2.html
@@ -56,7 +56,7 @@
     <!-- news content-->
 
     <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
+        <div class="text-center">Pixel 9 Pro and Pixel 9 Pro XL launched.</div>
     </div>
     <div class="news_dt">
         <div>Date: Aug16,2024</div>
