--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -63,7 +63,7 @@
         <div> Time: 11am</div>
     </div>
     <div>
-        <img src="./../../images/pixelwatch.jpeg" alt="" class="news_img">
+        <img src="./../../images/tech img 3.jpg" alt="" class="news_img">
         <div>
             
         </div>
