--- a/pages/tech/tech5.html
+++ b/pages/tech/tech5.html
@@ -56,7 +56,7 @@
     <!-- news content-->
 
     <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
+        <div class="text-center">Instagram features to let user keep friends update on their location.</div>
     </div>
     <div class="news_dt">
         <div>Date: Aug16,2024</div>
