--- a/pages/tech/tech3.html
+++ b/pages/tech/tech3.html
@@ -56,7 +56,7 @@
     <!-- news content-->
 
     <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
+        <div class="text-center">Vivo,Xiaomi leads as Indian smartphone market in 2024.</div>
     </div>
     <div class="news_dt">
         <div>Date: Aug16,2024</div>
