--- a/pages/tech/tech4.html
+++ b/pages/tech/tech4.html
@@ -56,7 +56,7 @@
     <!-- news content-->
 
     <div class="news-con">
-        <div class="text-center">Pixel Watch 3 With Brighter Display Launched in India</div>
+        <div class="text-center">SpaceX’s mission to explore polar orbit first for spaceflight.</div>
     </div>
     <div class="news_dt">
         <div>Date: Aug16,2024</div>
