football and hockey  changes

--- a/pages/sport/hocky.html
+++ b/pages/sport/hocky.html
@@ -58,13 +58,21 @@
 
     <!-- End here navbar  -->
      <!-- End here navbar  -->
+     <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+    <h1>'GREAT WALL':Sreejesh is a legend of hockey : India teammates.</h1>
+    </div>
+    <div class="d-t">
+        Date: JUL 05,2023<br>
+        Time:11.18 am<br>
+        Refers:Timeofindia<br>
+    </div>
 <div class="container0">
     <h1 style="text-align: center">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h1>
 <br><br>
 <p><span style="text-align: left;">
     Date:Aug 12,2022<br>
-    Time:11.21 am<br>
-    Refers:Timeofindia<br>
+    
 </span>
 </p>
     <img src="../../images/hockey"style="height:400px;margin:20px">
