--- a/pages/sport/cricket.html
+++ b/pages/sport/cricket.html
@@ -57,15 +57,16 @@
     </header>
 
     <!-- End here navbar  -->
+    <div class="readmore-heading-details">
+        <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+
+        <h1 style="text-align: center;">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h1>
+    </div>
+    <div class="d-t">
+        Date: Aug 8,2024<br>
+           </div>
 <div class="container0">
-    <h1 style="text-align: center;">'We did not play.....':ROHIT SHARMA EXPLAIN WHY INDIA FAILED TO  DOMINATE AGAINST SHRI  LANKA SPIN</h1>
-<br><br>
-<p><span style="text-align: left;">
-    Date: Aug 8,2024<br>
-    Time:11.26 am<br>
-    Refers:Timeofindia<br>
-</span>
-</p>
+
     <img src="./../../images/rohitsharma"style="height:400px;margin:20px">
     <br>
  <span style="font-size:12px;text-align: center;">India captain Rohit Sharma at the end of the third ODI against Sri Lanka in Colombo.</span>
