--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/homepage.css">
+    <link rel="stylesheet" href="./CSS/HomeStyles.css">
     <title>The News Reporter</title>
 </head>
 
@@ -13,8 +13,6 @@
     <!-- started here navbar -->
 
     <header>
-
-
         <nav>
             <div class="top-navbar">
                 <div>
@@ -53,11 +51,11 @@
             <div>
                 <ul class="nav-list">
                     <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
+                    <li><a href="./pages/sport/sport.html">Sports</a></li>
+                    <li><a href="./pages/tech/tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
+                    <li><a href="./pages/Business/Business_News.html">Business</a></li>
+                    <li><a href="./pages/culture.html">Culture</a></li>
                     <li><a href="">Education</a></li>
                 </ul>
             </div>
@@ -69,14 +67,14 @@
     <!-- hero section started form here  -->
     <section class="hero-section">
         <div class="hero-content">
-            <h1>Breaking News: Major Event Unfolding</h1>
-            <p>Stay updated with the latest developments on this important story. Our team is on the ground bringing you
-                the most accurate and timely updates.</p>
-            <a href="#">Read More</a>
+            <h1>Welcome to the News Reporter
+                media company</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione ipsum obcaecati commodi, laboriosam id
+                magni. Iusto sapiente laudantium!</p>
+            <a href="../index.html">Read More</a>
         </div>
     </section>
-    <!-- hero section end here-->
-
+    <!-- hero section end here  -->
 
     <!-- started card and sidebar sections -->
 
@@ -93,8 +91,9 @@
                             alt="">
                         <div class="homepage-Card">
                             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut
-                                cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -103,8 +102,9 @@
                             alt="">
                         <div class="homepage-Card">
                             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut
-                                cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -113,8 +113,9 @@
                             alt="">
                         <div class="homepage-Card">
                             <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut
-                                cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                obcaecati
+                                voluptatem temporibus reprehenderit iure mollitia!</p>
                             <a href="">Read more</a>
                         </div>
                     </div>
@@ -134,8 +135,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -144,8 +146,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -154,8 +157,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -179,8 +183,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -189,8 +194,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -199,8 +205,9 @@
                                 alt="">
                             <div class="homepage-Card">
                                 <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur
-                                    ut cum obcaecati voluptatem temporibus reprehenderit iure mollitia!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est tenetur ut cum
+                                    obcaecati
+                                    voluptatem temporibus reprehenderit iure mollitia!</p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
@@ -286,11 +293,11 @@
                 <h3>Important Links</h3>
                 <ul>
                     <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
+                    <li><a href="./pages/sport/sport.html">Sports</a></li>
+                    <li><a href="./pages/tech/tech.html">Tech</a></li>
                     <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
+                    <li><a href="./pages/Business/Business_News.html">Business</a></li>
+                    <li><a href="./pages/culture.html">Culture</a></li>
                     <li><a href="">Education</a></li>
                 </ul>
             </div>
@@ -299,8 +306,8 @@
                 <ul>
                     <li>4567 Shivaji Lane</li>
                     <li>Chatrapati Nagar, Ward 12</li>
-                    <li>Nagpur, Maharashtra 440018 India
-                    </li>
+                    <li>Nagpur, Maharashtra 440018
+                        India</li>
                 </ul>
                 <div class="footer-follow-us-Container">
                     <h3>Follow Us</h3>
