--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     <header>
         <nav>
             <div class="top-navbar">
-                <div>
-                    <h4>The</h4>
-                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                </div>
+                <a href="./index.html">
+                    <div>
+                        <h4>The</h4>
+                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                    </div>
+                </a>
                 <div>
                     <ul class="top-nav-list">
-                        <li>Home</li>|
-                        <li><a href="./pages/aboutusPage.html">About</a></li>|
-                        <li><a href="">Contact</a></li>|
-                        <li><a href="">Login</a></li>
+                        <li>Home</li>
+                        <li><a href="./pages/aboutusPage.html">About</a></li>
+                        <li><a href="./pages/contact.html">Contact</a></li>
+                        <li><a href="./pages/login.html">Login</a></li>
                     </ul>
                 </div>
                 <div>
@@ -50,13 +52,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="">world news</a></li>
+                    <li><a href="./pages/worldnews/worldnews.html">world news</a></li>
                     <li><a href="./pages/sport/sport.html">Sports</a></li>
                     <li><a href="./pages/tech/tech.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
+                    <li><a href="./pages/Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./pages/Business/Business_News.html">Business</a></li>
                     <li><a href="./pages/culture.html">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./pages/Education/education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
@@ -285,20 +287,20 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="./pages/aboutusPage.html">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./pages/contact.html">Contact</a></li>
+                    <li><a href="./pages/login.html">Login</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
+                    <li><a href="./pages/worldnews/worldnews.html">world news</a></li>
                     <li><a href="./pages/sport/sport.html">Sports</a></li>
                     <li><a href="./pages/tech/tech.html">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
+                    <li><a href="./pages/Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./pages/Business/Business_News.html">Business</a></li>
                     <li><a href="./pages/culture.html">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./pages/Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
