add content in olympic page

--- a/pages/sport/olympic.html
+++ b/pages/sport/olympic.html
@@ -41,11 +41,37 @@
                     </div>
                 </div>
             </div>
-
+            
+            <div>
+                <ul class="nav-list">
+                    <li><a href="../../index.html">world news</a></li>
+                    <li><a href="./sport.html">Sports</a></li>
+                    <li><a href="../tech/tech.html">Tech</a></li>
+                    <li><a href="../entertainment.html">Entertainment</a></li>
+                    <li><a href="../Business/Business_News.html">Business</a></li>
+                    <li><a href="../culture.html">Culture</a></li>
+                    <li><a href="../education.html">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+</nav>
             <div>
                
 
     <!-- End here navbar  -->
+    <div class="readmore-heading-details">
+        <a href="./../../pages/sport/sport.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+    <h1>No matter how big a champion someone is, he does not always win, says Neeraj Chopra</h1>
+    </div>
+    <div class="d-t">
+        Date: JUL 05,2023<br>
+       </div>
+    <div class="container0">
+        <img src="../../images/neeraj.webp"style="height:400px;margin:20px">
+            <br>
+         <span style="font-size:12px;text-align: center;"></span>
+         <br>
+
 <div>
 
 
@@ -57,7 +83,8 @@
 
 
 </div>
-
+</div>
+</div>
 
 
 
