add a link on logo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header>
         <nav>
             <div class="top-navbar">
-                <a href="./index.html">
-                    <div>
+                <div class="main-logo">
+                    <a href="./index.html">
                         <h4>The</h4>
                         <h2><span class="heading-fisrt">News</span> Reporter</h2>
-                    </div>
-                </a>
+                    </a>
+                </div>
                 <div>
                     <ul class="top-nav-list">
                         <li>Home</li>
