--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -14,9 +14,11 @@
     <header>
         <nav>
             <div class="top-navbar">
-                <div>
-                    <h4>The</h4>
-                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                <div class="main-logo">
+                    <a href="../index.html">
+                        <h4>The</h4>
+                        <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                    </a>
                 </div>
                 <div>
                     <ul class="top-nav-list">
