add content in olympic page

--- a/pages/sport/olympic.html
+++ b/pages/sport/olympic.html
@@ -64,8 +64,7 @@
     <h1>No matter how big a champion someone is, he does not always win, says Neeraj Chopra</h1>
     </div>
     <div class="d-t">
-        Date: JUL 05,2023<br>
-       </div>
+        Date:August 10, 2024</div>
     <div class="container0">
         <img src="../../images/neeraj.webp"style="height:400px;margin:20px">
             <br>
